--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<title>Todo - App</title>
 		<link rel="stylesheet" href="styles.css">
 
-		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	</head>
 
